2006-03-28  Simon Leinen  <simon.leinen@switch.ch>

	* samplicate.c (enum peer_flags): New flag `pf_CHECKSUM'.

	(parse_args): Recognize `-n' flag.

	* README: Document `-n' flag.

	* rawsend.h (raw_send_from_to): Added `flags' argument.

	(RAWSEND_COMPUTE_UDP_CHECKSUM): Defined.

	* rawsend.c (raw_send_from_to): Added `flags' argument.

	(udp_sum_calc): New function, compute UDP checksum.

	* AUTHORS: Document UDP checksum generation.

2005-10-26  Simon Leinen  <simon.leinen@switch.ch>

	* AUTHORS: Added note on James Sella's contributions.

	* samplicate.c:
	Integrated support for the `-s' (source address to bind() to) and `-f'
	(fork) options contributed by James Sella.

2005-10-25  Simon Leinen  <simon.leinen@switch.ch>

	* AUTHORS: Deleted David's e-mail address.

	* README: Document `-s' and `-f' options (courtesy of James Sella).

	* configure.in: Incremented version to 1.3.4.

	* NEWS: Documented new options in 1.3.4.

	Updated copyright notice.

2005-10-06  Simon Leinen  <simon.leinen@switch.ch>

	* NEWS: Added 1.3.3 notes.

	* configure.in: Incremented version to 1.3.3.

	* AUTHORS: Mention Jurai Sucik.

	* samplicate.c (parse_args): Don't forget to clear `defaultflags'.
	Kudos to Juraj Sucik <Juraj.Sucik@cern.ch> for finding this bug!

2005-10-06  Simon Leinen  <simon.leinen@switch.ch>

	* configure.in (AM_INIT_AUTOMAKE): Version 1.3.2 -> 1.3.3.

	* AUTHORS: Mention Jurai Sucik.

	* samplicate.c (parse_args): Don't forget to clear `defaultflags'.
	Kudos to Juraj Sucik <Juraj.Sucik@cern.ch> for finding this bug!

2001-09-18  Simon Leinen  <simon.leinen@switch.ch>

	* samplicate.c (parse_args): Terminate on illegal flow port.

	* configure.in (AM_INIT_AUTOMAKE): Version 1.3.1 -> 1.3.2.

	* rawsend.c (raw_send_from_to):
	Convert host to network order in IP header fields
	for some systems that are known to require that.

	* samplicate.c (PORT_SEPARATOR):
	Changed from `:' to `/' to retain backwards
	compatibility.
